HW1 Correction: change 100000 to inf

--- a/HW1/hw1_dictionary_based_tokenization.ipynb
+++ b/HW1/hw1_dictionary_based_tokenization.ipynb
@@ -215,19 +215,19 @@
     "## The output of your maximal matching algoithm on a new dictionary\n",
     "Expected output:\n",
     "<br>\n",
-    "[1, 1, 100000, 1, 100000, 100000, 100000, 100000, 100000] ไ\n",
+    "[1, 1, inf, 1, inf, inf, inf, inf, inf] ไ\n",
     "<br>\n",
-    "[None, 2, 100000, 100000, 100000, 100000, 100000, 100000, 100000] ป\n",
+    "[None, 2, inf, inf, inf, inf, inf, inf, inf] ป\n",
     "<br>\n",
-    "[None, None, 2, 2, 2, 100000, 100000, 100000, 100000] ห\n",
+    "[None, None, 2, 2, 2, inf, inf, inf, inf] ห\n",
     "<br>\n",
-    "[None, None, None, 100000, 100000, 100000, 100000, 100000, 100000] า\n",
+    "[None, None, None, inf, inf, inf, inf, inf, inf] า\n",
     "<br>\n",
-    "[None, None, None, None, 2, 100000, 100000, 100000, 2] ม\n",
+    "[None, None, None, None, 2, inf, inf, inf, 2] ม\n",
     "<br>\n",
-    "[None, None, None, None, None, 100000, 3, 100000, 100000] เ\n",
+    "[None, None, None, None, None, inf, 3, inf, inf] เ\n",
     "<br>\n",
-    "[None, None, None, None, None, None, 100001, 100000, 100000] ห\n",
+    "[None, None, None, None, None, None, inf, inf, inf] ห\n",
     "<br>\n",
     "[None, None, None, None, None, None, None, 4, 4] ส\n",
     "<br>\n",
@@ -280,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
