--- a/HW1/hw1_dictionary_based_tokenization.ipynb
+++ b/HW1/hw1_dictionary_based_tokenization.ipynb
@@ -204,7 +204,7 @@
     "    thai_vocab = f.read().splitlines() \n",
     "print(\"Vocab size:\", len(thai_vocab))\n",
     "print(thai_vocab[:10])\n",
-    "\n",
+    "#you can add more vocab to the dictionary \n",
     "thai_vocab.extend([\"ๆ\",\"!\"])"
    ]
   },
@@ -280,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
