Correction: change None to inf

--- a/HW1/hw1_dictionary_based_tokenization.ipynb
+++ b/HW1/hw1_dictionary_based_tokenization.ipynb
@@ -231,7 +231,7 @@
     "<br>\n",
     "[None, None, None, None, None, None, None, 4, 4] ส\n",
     "<br>\n",
-    "[None, None, None, None, None, None, None, None, None] ี"
+    "[None, None, None, None, None, None, None, None, inf] ี"
    ]
   },
   {
