--- a/HW1/hw1_dictionary_based_tokenization.ipynb
+++ b/HW1/hw1_dictionary_based_tokenization.ipynb
@@ -212,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The output of your maximal matching algoithm on a new dictionary\n",
+    "## The output of your maximal matching algorithm on a new dictionary\n",
     "Expected output:\n",
     "<br>\n",
     "[1, 1, inf, 1, inf, inf, inf, inf, inf] ไ\n",
