--- a/HW4/Language-Modeling-student.ipynb
+++ b/HW4/Language-Modeling-student.ipynb
@@ -539,7 +539,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TODO #8 (optional: Bonus 0.5) \n",
+    "## TODO #8 (optional: Bonus 0.5 points) \n",
     "Implement kneser-ney smoothing with news and article data "
    ]
   },
