update ipython notebook with corrections

--- a/HW4/Language-Modeling-student.ipynb
+++ b/HW4/Language-Modeling-student.ipynb
@@ -63,11 +63,11 @@
     "for i,line in enumerate(fp):\n",
     "    best2010.append(line.strip()[:-1])\n",
     "fp.close()\n",
-    "vocabuary =set()\n",
+    "all_vocabulary =set()\n",
     "total_word_count =0\n",
     "for line in best2010:\n",
     "    for word in line.split('|'):        \n",
-    "        vocabuary.add(word)\n",
+    "        all_vocabulary.add(word)\n",
     "        total_word_count+=1"
    ]
   },
@@ -82,7 +82,7 @@
      "text": [
       "Total sentences in BEST2010 news dataset :\t30969\n",
       "Total word counts in BEST2010 news dataset :\t1660190\n",
-      "Total vocabuary in BEST2010 news dataset :\t35488\n"
+      "Total vocabulary in BEST2010 news dataset :\t35488\n"
      ]
     }
    ],
@@ -90,7 +90,7 @@
     "#For simplicity, we assumes that each line is a sentence.\n",
     "print ('Total sentences in BEST2010 news dataset :\\t'+ str(len(best2010)))\n",
     "print ('Total word counts in BEST2010 news dataset :\\t'+ str(total_word_count))\n",
-    "print ('Total vocabuary in BEST2010 news dataset :\\t'+ str(len(vocabuary)))"
+    "print ('Total vocabulary in BEST2010 news dataset :\\t'+ str(len(all_vocabulary)))"
    ]
   },
   {
@@ -104,15 +104,35 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total sentences in BEST2010 news training dataset :\t21678\n",
+      "Total word counts in BEST2010 news training dataset :\t1042797\n",
+      "Total vocabuary in BEST2010 news training dataset :\t26240\n"
+     ]
+    }
+   ],
    "source": [
     "sentences = best2010\n",
     "# The data is separated to train and test set with 70:30 ratio.\n",
     "train = sentences[:int(len(sentences)*0.7)]\n",
     "test = sentences[int(len(sentences)*0.7):]\n",
     "\n",
-    "# We will use 1/total word count as a default value for unknown word\n",
-    "unk_value = math.pow(len(vocabuary),-1)"
+    "#Training data\n",
+    "train_vocabulary =set()\n",
+    "train_word_count =0\n",
+    "for line in train:\n",
+    "    for word in line.split('|'):        \n",
+    "        train_vocabulary.add(word)\n",
+    "        train_word_count+=1\n",
+    "print ('Total sentences in BEST2010 news training dataset :\\t'+ str(len(train)))\n",
+    "print ('Total word counts in BEST2010 news training dataset :\\t'+ str(train_word_count))\n",
+    "print ('Total vocabuary in BEST2010 news training dataset :\\t'+ str(len(train_vocabulary)))\n",
+    "# We will use 1/vocab_size as a default value for unknown word\n",
+    "unk_value = math.pow(len(train_vocabulary),-1)"
    ]
   },
   {
@@ -137,14 +157,14 @@
    "source": [
     "def getUnigramModel(data):\n",
     "    model = defaultdict(lambda: 0)\n",
-    "    total_word_count =0\n",
+    "    word_count =0\n",
     "    for sentence in data:\n",
     "        sentence +=  u'|</s>'\n",
     "        for w1 in sentence.split('|'):\n",
     "            model[w1] +=1.0\n",
-    "            total_word_count+=1\n",
+    "            word_count+=1\n",
     "    for w1 in model:\n",
-    "        model[w1] = model[w1]/(total_word_count)\n",
+    "        model[w1] = model[w1]/(word_count)\n",
     "    return model"
    ]
   },
@@ -180,7 +200,7 @@
      "output_type": "stream",
      "text": [
       "-6.551526663995246\n",
-      "-10.476949890150093\n",
+      "-10.175040243058024\n",
       "Problability of a sentence 2.75827124812635e-16\n"
      ]
     }
@@ -201,8 +221,8 @@
    "source": [
     "# Perplexity\n",
     "\n",
-    "In order to compare language model we need to calculate perplexity. In this task you should write a perplexity calculation code for the unigram model. The result perplexity should be around 513.97 and\n",
-    "452.66 on train and test data."
+    "In order to compare language model we need to calculate perplexity. In this task you should write a perplexity calculation code for the unigram model. The result perplexity should be around **556.39** and\n",
+    "**476.07** on train and test data."
    ]
   },
   {
@@ -220,7 +240,6 @@
    "source": [
     "def calculate_sentence_ln_prob(sentence, model):\n",
     "    pass\n",
-    "\n",
     "def perplexity(test,model):\n",
     "    pass"
    ]
@@ -234,8 +253,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "513.9747870973313\n",
-      "452.65524668351003\n"
+      "556.3925994212195\n",
+      "476.0687892303532\n"
      ]
     }
    ],
@@ -255,7 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Your answer**:  ........."
+    "**Your answer**:  __________"
    ]
   },
   {
@@ -309,7 +328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, you should be able to implement a bigram model by yourself. Also, you must create a new perplexity calculation for bigram. The result perplexity should be around 58.54 and 153.36 on train and test data."
+    "Now, you should be able to implement a bigram model by yourself. Also, you must create a new perplexity calculation for bigram. The result perplexity should be around **58.54** and **145.88** on train and test data."
    ]
   },
   {
@@ -328,8 +347,8 @@
     "def getBigramModel(data):\n",
     "    pass\n",
     "\n",
-    "\n",
-    "model = getBigramModel(train)"
+    "model = getBigramModel(train)\n",
+    "\n"
    ]
   },
   {
@@ -366,7 +385,7 @@
      "output_type": "stream",
      "text": [
       "58.53517510765259\n",
-      "153.36386541850547\n"
+      "145.88152832170624\n"
      ]
     }
    ],
@@ -405,8 +424,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1231.113465432258\n",
-      "1390.82820339171\n"
+      "966.258421450943\n",
+      "1092.150678001218\n"
      ]
     }
    ],
@@ -414,6 +433,7 @@
     "#Laplace Smoothing\n",
     "def getBigramWithLaplaceSmoothing(data):\n",
     "    pass\n",
+    "\n",
     "model =getBigramWithLaplaceSmoothing(train)\n",
     "print (perplexity(train,model) )\n",
     "print (perplexity(test, model))"
@@ -436,8 +456,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "39.899540475582384\n",
-      "107.26849422396057\n"
+      "39.68492331024024\n",
+      "101.5398416957907\n"
      ]
     }
    ],
@@ -456,8 +476,8 @@
    "source": [
     "the result perplexity on training and testing should be \n",
     "\n",
-    "    1231.14, 1390.85 for Laplace smoothing\n",
-    "    39.90, 107.27 for Interpolation"
+    "    966.26, 1092.15 for Laplace smoothing\n",
+    "    39.68, 101.54 for Interpolation"
    ]
   },
   {
@@ -489,9 +509,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, you should try to calculate perplexity of your bigram with interpolation on article data. The result perplexity should be around 466.17 \n",
+    "First, you should try to calculate perplexity of your bigram with interpolation on encyclopedia data. The result perplexity should be around **418.72**\n",
     "\n",
-    "For your information, a bigram model with interpolation using ariticle data to test on encyclopedia data has a perplexity of 281.24"
+    "For your information, a bigram model with interpolation using ariticle data to test on encyclopedia data has a perplexity of **272.77**"
    ]
   },
   {
@@ -503,7 +523,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "466.1682377516689\n"
+      "418.71561933299193\n"
      ]
     }
    ],
@@ -531,16 +551,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Kneser-ney Smoothing\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## TODO #8 (optional: Bonus 0.5 points) \n",
-    "Implement kneser-ney smoothing with news and article data "
+    "## TODO #8\n",
+    "Kneser-ney"
    ]
   },
   {
@@ -549,15 +561,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print (perplexity(encyclo_data,model))"
-   ]
   }
  ],
  "metadata": {
