--- a/HW5/thai_skip_gram_homework_for_student.ipynb
+++ b/HW5/thai_skip_gram_homework_for_student.ipynb
@@ -379,7 +379,7 @@
     "\n",
     "sample_set= dataset[:10]\n",
     "sampling_table = sequence.make_sampling_table(vocab_size)\n",
-    "#TO DO#3 check out keras source code and find out  their sampling technique works\n",
+    "#TO DO#3 check out keras source code and find out how their sampling technique works. Describe it in your own words.\n",
     "couples, labels = skipgrams(sample_set, vocab_size, window_size=skip_window, sampling_table=sampling_table)\n",
     "word_target, word_context = zip(*couples)\n",
     "word_target = np.array(word_target, dtype=\"int32\")\n",
