fixed bug: update skip gram traning loop

--- a/HW5/thai_skip_gram_demo.ipynb
+++ b/HW5/thai_skip_gram_demo.ipynb
@@ -31,17 +31,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import numpy as np\n",
@@ -75,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -164,15 +156,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "output sample (dataset): [228, 207, 2453, 572, 14, 1828, 7158, 3124, 680, 23]\n",
-      "output sample (dictionary): {'เรียนภู่': 127222, 'เทอเรซิเดนซ์': 295165, 'ประธานาธิบดีอดัม': 295163, 'ฟูลมูน': 88369, 'อ่วมอรทัย': 295166, 'วรรคละ': 31394, 'มาร์ติคอรัส': 295167, 'Lysgårdsbakken': 295168, 'Barsa': 295169, 'เอาบุญคำ': 295164}\n",
+      "output sample (dataset): [228, 207, 2454, 572, 14, 1828, 7162, 3123, 680, 23]\n",
+      "output sample (dictionary): {'พระพุทธบุษยรัตน์|': 295166, '(บรมบาล': 330260, 'ชุงมุโร': 295167, 'เออร์สเตด': 48551, 'OAD': 295164, 'ข่ายมโนทัศน์': 295163, 'ใหม่จวนจิว': 295168, 'กรรมการสถิติ': 153543, 'รวมอนันต์': 295165, 'Camp': 27297}\n",
       "output sample (reverse dictionary): {0: 'ที่', 1: 'ใน', 2: 'เป็น', 3: 'และ', 4: 'การ', 5: 'มี', 6: 'ของ', 7: 'ได้', 8: ')', 9: '\"'}\n"
      ]
     }
@@ -185,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +186,7 @@
        "701355"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,22 +204,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[7158, 3124], [680, 578490], [2453, 533901], [2453, 207], [572, 160071], [680, 3124], [680, 421520], [572, 2453], [680, 23], [2453, 572], [572, 284033], [7158, 680081], [7158, 365896], [2453, 449317], [7158, 1828], [572, 14]] [1, 0, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 1, 1]\n",
-      "วิกิ มีเดีย\n",
-      "องค์กร timore\n",
-      "วิกิพีเดีย เบ้นเนอร์\n",
-      "วิกิพีเดีย หลัก\n",
-      "ดำเนินการ ดอยภูแว\n",
+      "[[2454, 278683], [2454, 682668], [680, 23], [7162, 1828], [7162, 260123], [680, 3123], [2454, 207], [3123, 67637], [2454, 572], [7162, 3123], [3123, 7162], [3123, 587621], [680, 466439], [680, 256735], [7162, 515506], [3123, 680]] [0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 1, 0, 0, 0, 0, 1]\n",
+      "วิกิพีเดีย รีบากอร์ซา\n",
+      "วิกิพีเดีย ホンマにありがとう\n",
+      "องค์กร ไม่\n",
+      "วิกิ มูลนิธิ\n",
+      "วิกิ ชาร์ทเมน\n",
       "องค์กร มีเดีย\n",
-      "องค์กร thermos\n",
-      "ดำเนินการ วิกิพีเดีย\n"
+      "วิกิพีเดีย หลัก\n",
+      "มีเดีย บริษัทซัมซุง\n"
      ]
     }
    ],
@@ -260,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -321,12 +313,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Train for 5 epoch\n",
-    "#it will take roughly 3-4 hours for each epoch\n",
+    "# it will take roughly 3-4 hours for each epoch\n",
     "# PRO TIPS: you don't have to spend too much time training for your homework, you are allowed to do it on a smaller corpus\n",
     "# for _ in range(5):\n",
     "#     prev_i=0\n",
@@ -335,12 +327,12 @@
     "    \n",
     "#     for i in range(len(dataset)//100000):\n",
     "#         #generate skipgrams\n",
-    "#         data, labels = skipgrams(sequence=dataset[prev_i:i+100000], vocabulary_size=V, window_size=2, negative_samples=4.)\n",
+    "#         data, labels = skipgrams(sequence=dataset[prev_i*100000:(i*100000)+100000], vocabulary_size=V, window_size=2, negative_samples=4.)\n",
     "#         x = [np.array(x) for x in zip(*data)]\n",
     "#         y = np.array(labels, dtype=np.int32)\n",
     "#         if x:\n",
     "#             loss = SkipGram.train_on_batch(x, y)\n",
-    "        \n",
+    "#         prev_i = i \n",
     "#         print(loss,i*100000)\n",
     "\n"
    ]
