--- a/HW5/thai_skip_gram_homework_for_student.ipynb
+++ b/HW5/thai_skip_gram_homework_for_student.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,9 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create a character map\n",
@@ -128,9 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def create_n_gram_df(df, n_pad):\n",
@@ -441,14 +437,20 @@
    "source": [
     "for _ in range(5):\n",
     "    prev_i=0\n",
+    "    #it is likely that your GPU won't be able to handle 36 million words\n",
+    "    #just do it 100000 words at a time\n",
+    "    \n",
     "    for i in range(len(dataset)//100000):\n",
-    "        data, labels = skipgrams(sequence=dataset[prev_i:i+100000], vocabulary_size=V, window_size=2, negative_samples=4.)\n",
+    "        #generate skipgrams\n",
+    "        data, labels = skipgrams(sequence=dataset[prev_i*100000:(i*100000)+100000], vocabulary_size=V, window_size=2, negative_samples=4.)\n",
     "        x = [np.array(x) for x in zip(*data)]\n",
     "        y = np.array(labels, dtype=np.int32)\n",
     "        if x:\n",
     "            loss = SkipGram.train_on_batch(x, y)\n",
-    "        \n",
-    "        print(loss,i*100000)\n"
+    "        prev_i = i \n",
+    "        print(loss,i*100000)\n",
+    "\n",
+    "\n"
    ]
   },
   {
