update notebooks with links to images

--- a/HW8/key_value_attention_mechanism_homework.ipynb
+++ b/HW8/key_value_attention_mechanism_homework.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Key-Value Attention Mechanism Homework on Keras: Character-level Machine Translation (Many-to-Many, encoder-decoder)\n",
     "\n",
-    "In this homework, you will create an MT model with key-value attention mechnism that coverts names of Thai 2019 MP candidates from Thai script to Roman(Latin) script. E.g. นิยม-->niyom "
+    "In this homework, you will create an MT model with key-value attention mechnism that coverts names of constituency MP candidates in the 2019 Thai general election from Thai script to Roman(Latin) script. E.g. นิยม-->niyom "
    ]
   },
   {
@@ -42,9 +42,9 @@
    "metadata": {},
    "source": [
     "## Load Dataset\n",
-    "We have generated a toy dataset using names of Thai MP candidates in 2019 Thai General Election from elect.in.th's github(https://github.com/codeforthailand/dataset-election-62-candidates) and tltk (https://pypi.org/project/tltk/) library to convert them into Roman script.\n",
+    "We have generated a toy dataset using names of constituency MP candidates in 2019 Thai General Election from elect.in.th's github(https://github.com/codeforthailand/dataset-election-62-candidates) and tltk (https://pypi.org/project/tltk/) library to convert them into Roman script.\n",
     "\n",
-    "<img src=\"dataset_diagram.png\" alt=\"Drawing\" style=\"width: 500px;\"/>\n"
+    "<img src=\"https://raw.githubusercontent.com/ekapolc/nlp_2019/master/HW8/images/dataset_diagram.png\" alt=\"Drawing\" style=\"width: 500px;\"/>\n"
    ]
   },
   {
@@ -54,20 +54,13 @@
    "outputs": [],
    "source": [
     "import csv\n",
-    "\n",
     "with open('mp_name_th_en.csv') as csvfile:\n",
     "    readCSV = csv.reader(csvfile, delimiter=',')\n",
     "    name_th = []\n",
     "    name_en = []\n",
     "    for row in readCSV:\n",
-    "        temp_th = row[0]\n",
-    "        temp_en = row[1]\n",
-    "\n",
-    "        name_th.append(temp_th)\n",
-    "        name_en.append(temp_en)\n",
-    "\n",
-    "   \n",
-    "    "
+    "        name_th.append(row[0])\n",
+    "        name_en.append(row[1])"
    ]
   },
   {
@@ -217,7 +210,7 @@
     "### Plot the attention map\n",
     "* If you need to install thai font: sudo apt install xfonts-thai\n",
     "* this is what your visualization might look like:\n",
-    "<img src=\"attn_viz_sample.png\"  style=\"width: 350px;\"/>"
+    "<img src=\"https://raw.githubusercontent.com/ekapolc/nlp_2019/master/HW8/images/attn_viz_sample.png\"  style=\"width: 350px;\"/>"
    ]
   },
   {
