--- a/HW8/key_value_attention_mechanism_homework.ipynb
+++ b/HW8/key_value_attention_mechanism_homework.ipynb
@@ -120,7 +120,7 @@
     "* Define global variables\n",
     "* fill code for one_step_attention function\n",
     "* Hint: use keras.layers.Lambda \n",
-    "* HINT: you probably gonna need more hidden dimmensions than what you've seen in the demo\n"
+    "* HINT: you will probably need more hidden dimmensions than what you've seen in the demo\n"
    ]
   },
   {
@@ -163,7 +163,7 @@
    "metadata": {},
    "source": [
     "## Task3: Create and train your encoder/decoder model here (1 point)\n",
-    "* HINT: you probably gonna need more hidden dimmensions than what you've seen in the demo"
+    "* HINT: you will probably need more hidden dimmensions than what you've seen in the demo"
    ]
   },
   {
