--- a/HW9/HW9-beam-search.ipynb
+++ b/HW9/HW9-beam-search.ipynb
@@ -544,7 +544,7 @@
    "metadata": {},
    "source": [
     "However, you might notice that even with the sampling method we just introduced, the output is most likely to be the same as greedy decoding because the probabilities of each word are too different (0.99 vs 0.01). \n",
-    "Thus, we will use another method called temperature sampling to smoothen the probilities. Before sampling, we will scale each probabilites by powering it with _1/T_ then divide each value to the sum of all values to make its sum equals to 1 again. \n",
+    "Thus, we will use another method called temperature sampling to smoothen the probilities. Before sampling, we will scale each probabilites by powering it with _1/T_ then divide each value with the sum of all values to make its sum equals to 1 again. \n",
     "\n",
     "$$f_T(p_i) = \\frac{p_i^{1/T}}{\\sum p_i^{1/T}} $$\n",
     "\n",
