--- a/HW9/HW9-beam-search.ipynb
+++ b/HW9/HW9-beam-search.ipynb
@@ -548,7 +548,7 @@
     "\n",
     "$$f_T(p_i) = \\frac{p_i^{1/T}}{\\sum p_i^{1/T}} $$\n",
     "\n",
-    "Larger T will make the model more likely to choose unlikely words at each step. If T is 1, it will be the same as argmax."
+    "Larger T will make the model more likely to choose unlikely words at each step. If T is close to 0, it will be the same as argmax."
    ]
   },
   {
